chore: minor updates